--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -356,7 +356,7 @@
 
                                     var locPosition = new kakao.maps.LatLng(lat, lon); // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
                                     console.log(locPosition)
-                                    setTimeout(map(locPosition), 1000)
+                                    setTimeout(map(locPosition), 1000);
                                 })
                             }
                         </script>
