--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -347,6 +347,8 @@
                                     });
                                 }
                             }
+                        </script>
+                        <script>
                             if (navigator.geolocation) {
                                 // GeoLocation을 이용해서 접속 위치를 얻어옵니다
                                 navigator.geolocation.getCurrentPosition(function (position) {
