--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -346,7 +346,7 @@
                                 });
                                 var dist = poly.getLength();
                                 if (dist <= 500000) {
-                                    document.getElementById("post_office").innerText = a;
+                                    document.getElementById("post_office").innerText = "a";
                                 }
                             })
                         }
