--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -326,29 +326,29 @@
                                         position: coords
                                     });
 
+                                    if (navigator.geolocation) {
+                                        // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+                                        navigator.geolocation.getCurrentPosition(function (position) {
+
+                                            var lat = position.coords.latitude; // 위도
+                                            var lon = position.coords.longitude; // 경도
+
+                                            var locPosition = new kakao.maps.LatLng(lat, lon); // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+
+                                            var c2 = marker.getPostion()
+                                            var poly = new kakao.maps.Polyline({
+                                                path: [locPosition, c2]
+                                            });
+                                            var dist = poly.getLength();
+                                            if (dist <= 500000) {
+                                                document.getElementById("post_office").innerText = "a";
+                                            }
+                                        })
+                                    }
                                     // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                                    map.setCenter(coords);
+                                    //map.setCenter(coords);
                                 }
                             });
-                        }
-                        if (navigator.geolocation) {
-                            // GeoLocation을 이용해서 접속 위치를 얻어옵니다
-                            navigator.geolocation.getCurrentPosition(function (position) {
-
-                                var lat = position.coords.latitude; // 위도
-                                var lon = position.coords.longitude; // 경도
-
-                                var locPosition = new kakao.maps.LatLng(lat, lon); // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
-
-                                var c2 = marker.getPostion()
-                                var poly = new kakao.maps.Polyline({
-                                    path: [locPosition, c2]
-                                });
-                                var dist = poly.getLength();
-                                if (dist <= 500000) {
-                                    document.getElementById("post_office").innerText = "a";
-                                }
-                            })
                         }
                     </script>
                     <br></br>
