--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -335,7 +335,7 @@
 
                                             var locPosition = new kakao.maps.LatLng(lat, lon); // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
 
-                                            var c2 = marker.getPostion();
+                                            var c2 = marker.getPosition();
                                             var poly = new kakao.maps.Polyline({
                                                 path: [locPosition, c2]
                                             });
