--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -341,7 +341,7 @@
                                             });
                                             var dist = poly.getLength();
                                             if (dist <= 500000) {
-                                                document.getElementById("post_office").innerText = test[i];
+                                                document.getElementById("post_office").innerText = test[i].toString();
                                             }
                                         })
                                     }
