--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -242,7 +242,7 @@
                 <!-- Page Heading -->
                 <h1 class="h3 mb-1 text-gray-800">국내 마스크 보급 우체국 위치</h1>
                 <p class="mb-1">
-                    <div id="map" style="width:100%;height:500px;"></div>
+                    <div id="map" style="width:100%;height:300px;" align = "center"></div>
 
                     <script type="text/javascript"
                         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49&libraries=services"></script>
@@ -312,7 +312,7 @@
                             , '장안로 10 - 7', '후평바리미길 6', '구티1길 15', '관기송현로 128']
 
 
-                        for (var i = 0; i <= 600; i++) {
+                        for (var i = 0; i <= 200; i++) {
                             geocoder.addressSearch(test[i], function (result, status) {
 
                                 // 정상적으로 검색이 완료됐으면 
