--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -245,7 +245,7 @@
                 <!-- Page Heading -->
                 <h1 class="h3 mb-1 text-gray-800">국내 마스크 보급 우체국 위치</h1> 
                 <div id="container"></div>
-                <div id="map" style="width:100%;height:300px; align:center "></div>
+                <div id="map" style="width:100%;height:300px; text-align:center "></div>
 
                 <script type="text/javascript"
                     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49&libraries=services"></script>
@@ -344,7 +344,7 @@
                                         });
                                         var dist = poly.getLength();
                                         if (dist <= 500000) {
-                                            address += text[i] + '\n';
+                                            address += test[i] + '\n';
                                         }
                                     })
                                 }
@@ -353,7 +353,7 @@
                             }
                         });
                     }
-                    document.getElementById("post_office").innerText = address
+                    document.getElementById("post_office").innerText = address;
                 </script>
                 <br></br>
                 <p id="post_office"></p>
