--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -315,6 +315,7 @@
                         , '장안로 10 - 7', '후평바리미길 6', '구티1길 15', '관기송현로 128']
 
 
+                    function map_draw() {    
                     for (var i = 0; i <= 200; i++) {
                         geocoder.addressSearch(test[i], function (result, status) {
 
@@ -354,6 +355,10 @@
                         });
                     }
                     document.getElementById("post_office").innerText = address;
+                    }
+                </script>
+                <script>
+                map_draw();
                 </script>
                 <br></br>
                 <p id="post_office"></p>
