--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -358,7 +358,7 @@
                                 }
                             });
                         }
-                        setTimeout(test2,500)
+                        setTimeout("test2()",500)
                     }
                     function test2(){
                         document.getElementById("post_office").innerText = address;
