--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -60,7 +60,7 @@
                     <span>코로나 바이러스란?</span>
                 </a>
                 <div id="collapseVirus" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
+                    data-parent="#accordionSidebar" style="z-index:2">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">코로나 바이러스</h6>
                         <a class="collapse-item" href="about_corona.html">코로나 바이러스란?</a>
@@ -78,7 +78,7 @@
                     <span>국내 상황</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
+                    data-parent="#accordionSidebar" style="z-index:2">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">국내 상황</h6>
                         <a class="collapse-item" href="korea_situation.html">지역별 감염 상황</a>
@@ -105,7 +105,7 @@
                     <span>국제 상황</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
+                    <div class="bg-white py-2 collapse-inner rounded" style="z-index:2">
                         <h6 class="collapse-header">국제 상황</h6>
                         <a class="collapse-item"
                             href="https://www.cdc.gov/coronavirus/2019-ncov/locations-confirmed-cases.html">국제
@@ -128,7 +128,7 @@
                     <span>마스크 보급 위치</span>
                 </a>
                 <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
+                    data-parent="#accordionSidebar" style="z-index:2">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">마스크 보급소 위치</h6>
                         <a class="collapse-item" href="mask_post_office.html">우체국</a>
@@ -145,7 +145,7 @@
                     <span>관련 봉사/지원</span>
                 </a>
                 <div id="collapseVolunteer" class="collapse" aria-labelledby="volunteer"
-                    data-parent="#accordionSidebar">
+                    data-parent="#accordionSidebar" style="z-index:2">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">관련 봉사/지원</h6>
                         <a class="collapse-item" href="https://www.1365.go.kr/vols/P9210/partcptn/timeCptn.do"
