--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -316,9 +316,8 @@
                         , '송호로 7', '용화양강로 11 - 9', '학산영동로 837', '회인로1길 4', '삼승탄부로 7', '법주사로 274', '남부로 6268', '사담길 25', '하장3길 6 - 6'
                         , '장안로 10 - 7', '후평바리미길 6', '구티1길 15', '관기송현로 128']
 
-
-                    function map_draw() {
                         for (var i = 0; i <= 201; i++) {
+                            console.log(i)
                             geocoder.addressSearch(test[i], function (result, status) {
 
                                 // 정상적으로 검색이 완료됐으면 
@@ -359,10 +358,6 @@
                                 }
                             });
                         }
-                    }
-                </script>
-                <script>
-                    map_draw();
                 </script>
                 <br></br>
                 <p id="post_office"></p>
