--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -318,7 +318,7 @@
 
                         for (var i = 0; i <= 201; i++) {
                             geocoder.addressSearch(test[i], function (result, status) {
-                                console.log(test[i])
+                                //console.log(test[i])
 
                                 // 정상적으로 검색이 완료됐으면 
                                 if (status === kakao.maps.services.Status.OK) {
