--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -347,7 +347,7 @@
                                             if (dist <= 500000) {
                                                 //console.log(test[i])
                                                 //address += test[i] + '\n';
-                                                address += result[0].address_name + "\n";
+                                                address = result[0].address_name;
                                                 console.log(address);
                                                 document.getElementById("post_office").innerText = address;
                                                 
