--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -324,9 +324,11 @@
                                 if (status === kakao.maps.services.Status.OK) {
 
                                     var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+                                    var loc = result[0].address_name;
 
                                     // 결과값으로 받은 위치를 마커로 표시합니다
                                     var marker = new kakao.maps.Marker({
+                                        title: loc,
                                         map: map,
                                         position: coords
                                     });
@@ -348,8 +350,8 @@
                                             if (dist <= 500000) {
                                                 //console.log(test[i])
                                                 //address += test[i] + '\n';
-                                                address = result[0].address_name;
-                                                console.log(marker.getPosition());
+                                                address = marker.getTitle();
+                                                console.log(marker.getTitle());
                                                 document.getElementById("post_office").innerText = address;
                                                 
                                             }
