--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -362,6 +362,7 @@
                                 }
                             });
                         }
+                        console.log("test222" + maker.getTitle())
                 </script>
                 <br></br>
                 <p id="post_office"></p>
