--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -351,6 +351,7 @@
                                             var dist = poly.getLength();
                                             if (dist <= 500000) {
                                                 //console.log(test[i])
+                                                console.log('yeahhhhh')
                                                 //address += test[i] + '\n';
                                                 var test_addr = marker.getTitle();
                                                 console.log(test_addr);
