--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -349,7 +349,7 @@
                                                 path: [locPosition, c2]
                                             });
                                             var dist = poly.getLength();
-                                            if (dist <= 500000) {
+                                            if (dist <= 5000000) {
                                                 //console.log(test[i])
                                                 console.log('yeahhhhh')
                                                 //address += test[i] + '\n';
