--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -353,7 +353,7 @@
                                                 //console.log(test[i])
                                                 //console.log('yeahhhhh');
                                                 //address += test[i] + '\n';
-                                                address += marker.getTitle();
+                                                address += marker.getTitle() + "\n"; 
                                                 console.log(address);
                                                 document.getElementById("post_office").innerText = address;
                                                 
